--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ textarea:focus {
     box-sizing: border-box;
     border: 2px  solid white ;
     border-radius: 15px;
-    margin-right: 20px;
     height: 90%; width: 25%;
     position: absolute;
     top: 5%; left: 70%;
@@ -120,6 +119,7 @@ textarea:focus {
 /* efectos generales */
 
 .en:hover,.de:hover,.copy:hover{
+    transition: .25s;
     transform: scale(1.1);
 }
 /* inicia ajuste para dispositivos */
@@ -157,11 +157,10 @@ textarea:focus {
     .second{
         position: relative;
         width: 75%; height: 100%;
-        display: block;
+        display: inline-block;
         position: relative; 
         left: 12.5%; top: 200px; 
-        margin-bottom: 250px;
-        
+        margin-bottom: 250px; 
     }
     .no{
         position: relative;
@@ -196,7 +195,7 @@ textarea:focus {
         border: solid #103c74 1px;
     }
 }
-@media (max-width:1019px){
+@media ((min-width:701px) and (max-width:1019px)){
     .logo{
         width: 25%;
     }
@@ -230,11 +229,10 @@ textarea:focus {
     .second{
         position: relative;
         width: 75%; height: 100%;
-        display: block;
+        display: inline-block;
         position: relative; 
-        left: 12.5%; top: 200px; 
-        margin-bottom: 250px;
-        
+        left: 12.5%; top: 200px;    
+        margin-bottom: 250px; 
     }
     .no{
         position: relative;
@@ -268,4 +266,4 @@ textarea:focus {
         background-color: white;
         border: solid #103c74 1px;
     }
-}
+} 
