--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ textarea:focus {
         margin-top:15px;
         color: #173359;
         height: 25%;
-        font-family: Arial, Helvetica, sans-serif;
+        /* font-family: Arial, Helvetica, sans-serif; */
         font-size: 14px;
     }
     .copy{
