--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ textarea:focus {
     #enc{
         color: #103c74;
         font-size: 24px;
-        height: 375px;
+        height: 30%;
     }
     .box{
         width: 100%;
