--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     box-sizing: border-box;
     border: 2px ;
     margin-right: 20px;
-    height: 825px; width: 50%;
+    height: 80%; width: 50%;
     position: absolute;
     top: 8%; left: 10%;
 }
@@ -22,7 +22,7 @@ textarea:focus {
 #enc{
     color: #103c74;
     background-color: #f3f5fc;
-    width: 80%;
+    width: 80%; height: auto;
     font-family: "Gill Sans", sans-serif;
     font-size: 32px;
     text-align: left;
@@ -137,7 +137,7 @@ textarea:focus {
     #enc{
         color: #103c74;
         font-size: 24px;
-        height: 30%;
+        height: 375px;
     }
     .box{
         width: 100%;
